# flagged

./: .env  LICENSE.txt  README.md
backend/: .gitignore  README.md  connection.py  pyproject.toml  requirements.txt
backend/app/: __main__.py  auth.py  chall.py  config.py  config.py.example  main.py  notification.py  team.py  user.py
backend/app/auth/: JWTmgmt.py  __init__.py  bearer.py  hashing.py
backend/app/db/: __init__.py  models.py
backend/app/models/: auth.py  chall.py  notification.py  team.py  user.py
backend/app/routers/: auth.py  chall.py  notification.py  service.py  team.py  user.py
backend/app/utils/: JWTmgmt.py  email_utils.py
backend/utils/: email_utils.py  token_utils.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/challenges/: page.tsx
frontend/app/components/: Navbar.tsx  ParticlesBackground.tsx  ThemeToggle.tsx
frontend/app/email-token/: page.tsx
frontend/app/email-verify/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/notifications/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/scoreboard/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/team/: page.tsx
frontend/app/teams/: page.tsx
frontend/app/teams/[id]/: page.tsx
frontend/app/users/: page.tsx
frontend/app/users/[userId]/: page.tsx
frontend/scoreboard/: page.tsx
